--- a/csp_ca1/index.html
+++ b/csp_ca1/index.html
@@ -1,15 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="Author" content="Danilo">
-        <meta name="Description" content="A copy from Wikipedia One Piece's Article">
-        <title>Wiki - One Piece</title>
-    </head>
-    <body>
-        <h1>One Piece</h1>
-        <p> <strong>One Piece</strong> (stylized in all caps) is a Japanese <a href="https://en.wikipedia.org/wiki/Manga">manga</a> series written and illustrated by <a href="https://en.wikipedia.org/wiki/Eiichiro_Oda">Eiichiro Oda</a>. It has been serialized in Shueisha's shōnen manga magazine <a href="https://en.wikipedia.org/wiki/Weekly_Sh%C5%8Dnen_Jump">Weekly Shōnen Jump</a> since July 1997, with its individual chapters compiled into 101 tankōbon volumes as of December 2021. The story follows the adventures of Monkey D. Luffy, a boy whose body gained the properties of rubber after unintentionally eating a Devil Fruit. With his pirate crew, the Straw Hat Pirates, Luffy explores the Grand Line in search of the world's ultimate treasure known as the "One Piece" in order to become the next King of the Pirates.</p>
-        <p>The manga spawned a media franchise, having been adapted into a festival film produced by Production I.G, and an anime series produced by Toei Animation, which began broadcasting in Japan in 1999. Additionally, Toei has developed fourteen animated feature films, one OVA and thirteen television specials. Several companies have developed various types of merchandising and media, such as a trading card game and numerous video games. The manga series was licensed for an English language release in North America and the United Kingdom by Viz Media and in Australia by Madman Entertainment. The anime series was licensed by 4Kids Entertainment for an English-language release in North America in 2004, before the license was dropped and subsequently acquired by Funimation in 2007.</p>
-        <img src="https://upload.wikimedia.org/wikipedia/en/9/90/One_Piece,_Volume_61_Cover_(Japanese).jpg" alt="Volume 61 tankōbon cover, featuring Monkey D. Luffy (center) and the Straw Hat Pirates">
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="Author" content="Danilo">
+    <meta name="Description" content="A copy from Wikipedia One Piece's Article">
+    <title>Wiki - One Piece</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#1"> Paragraph 1</a></li>
+                <li><a href="#2"> Paragraph 2</a></li>
+                <li><a href="#3"> Paragraph 3</a></li>
+                <li><a href="#4"> Paragraph 4</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>One Piece</h1>
+            <p id="1"> <strong>One Piece</strong> (stylized in all caps) is a Japanese <a
+                    href="https://en.wikipedia.org/wiki/Manga">manga</a> series written and illustrated by <a
+                    href="https://en.wikipedia.org/wiki/Eiichiro_Oda">Eiichiro Oda</a>. It has been serialized in
+                Shueisha's shōnen
+                manga magazine <a href="https://en.wikipedia.org/wiki/Weekly_Sh%C5%8Dnen_Jump"><em>Weekly Shōnen Jump</em></a>
+                since July
+                1997, with its individual chapters compiled into 101 tankōbon volumes as of December 2021. The story
+                follows the
+                adventures of Monkey D. Luffy, a boy whose body gained the properties of rubber after unintentionally
+                eating a Devil
+                Fruit. With his pirate crew, the Straw Hat Pirates, Luffy explores the Grand Line in search of the
+                world's ultimate
+                treasure known as the "One Piece" in order to become the next King of the Pirates.</p>
+            <p id="2">The manga spawned a media franchise, having been adapted into a festival film produced by
+                Production I.G, and
+                an anime series produced by Toei Animation, which began broadcasting in Japan in 1999. Additionally,
+                Toei has
+                developed fourteen animated feature films, one OVA and thirteen television specials. Several companies
+                have
+                developed various types of merchandising and media, such as a trading card game and numerous video
+                games. The manga
+                series was licensed for an English language release in North America and the United Kingdom by Viz Media
+                and in
+                Australia by Madman Entertainment. The anime series was licensed by 4Kids Entertainment for an
+                English-language
+                release in North America in 2004, before the license was dropped and subsequently acquired by Funimation
+                in 2007.
+            </p>
+            <figure>
+                <img src="https://upload.wikimedia.org/wikipedia/en/9/90/One_Piece,_Volume_61_Cover_(Japanese).jpg"
+                    alt="Volume 61 tankōbon cover">
+                <figcaption>
+                    Volume 61 tankōbon cover, featuring Monkey D. Luffy (center) and the Straw Hat Pirates
+                </figcaption>
+            </figure>
+            <p id="3">One Piece has received praise for its storytelling, art, characterization, and humor. It has
+                received many
+                awards and is ranked by critics, reviewers, and readers as one of the best manga of all time. Several
+                volumes of the
+                manga have broken publishing records, including the highest initial print run of any book in Japan. In
+                2015, One
+                Piece set the Guinness World Record for "the most copies published for the same comic book series by a
+                single
+                author". It was the best-selling manga for eleven consecutive years from 2008 to 2018, and is the only
+                manga that
+                had an initial print of volumes of above 3 million continuously for more than 10 years, as well as the
+                only that had
+                achieved more than 1 million copies sold in all of its 100 published tankōbon volumes.</p>
+            <p id="4">As of July 2021, One Piece had over 490 million copies in circulation in 58 countries and regions
+                worldwide,
+                making it the best-selling manga series in history, and the best-selling comic series printed in book
+                volume. It is
+                also one of the highest-grossing media franchises of all time.</p>
+        </section>
+    </main>
+    <h2>Premise</h2>
+    <p>The series focuses on Monkey D. Luffy, a young man made of rubber, whom, inspired by his childhood idol, the
+        powerful
+        pirate "Red Haired" Shanks, sets off on a journey from the East Blue Sea to find the mythical treasure, the One
+        Piece, and proclaim himself the King of the Pirates. In an effort to organize his own crew, the Straw Hat
+        Pirates,[Jp 1] Luffy rescues and befriends a pirate hunter and swordsman named Roronoa Zoro, and they head off
+        in
+        search of the titular treasure. They are joined in their journey by Nami, a money-obsessed thief and navigator;
+        Usopp, a sniper and compulsive liar; and Sanji, a perverted but chivalrous chef. They acquire a ship, the Going
+        Merry,[Jp 2] and engage in confrontations with notorious pirates of the East Blue. As Luffy and his crew set out
+        on
+        their adventures, others join the crew later in the series, including Tony Tony Chopper, an anthropomorphized
+        reindeer doctor; Nico Robin, an archaeologist and former Baroque Works assassin; Franky, a cyborg shipwright;
+        Brook,
+        a skeleton musician and swordsman; and Jimbei, a fish-man helmsman and former member of the Seven Warlords of
+        the
+        Sea. Once the Going Merry becomes damaged beyond repair, the Straw Hat Pirates acquire a new ship, the Thousand
+        Sunny,[Jp 3] built by Franky. Together, they encounter other pirates, bounty hunters, criminal organizations,
+        revolutionaries, secret agents, and soldiers of the corrupt World Government, and various other friends and
+        foes, as
+        they sail the seas in pursuit of their dreams.</p>
+
+</body>
+
 </html>
