--- a/csp_ca1/index.html
+++ b/csp_ca1/index.html
@@ -16,6 +16,8 @@
                 <li><a href="#2"> Paragraph 2</a></li>
                 <li><a href="#3"> Paragraph 3</a></li>
                 <li><a href="#4"> Paragraph 4</a></li>
+                <li><a href="#5"> Paragraph 5</a></li>
+                <li><a href="#6"> Paragraph 6</a></li>
             </ul>
         </nav>
     </header>
@@ -25,29 +27,44 @@
             <p id="1"> <strong>One Piece</strong> (stylized in all caps) is a Japanese <a
                     href="https://en.wikipedia.org/wiki/Manga">manga</a> series written and illustrated by <a
                     href="https://en.wikipedia.org/wiki/Eiichiro_Oda">Eiichiro Oda</a>. It has been serialized in
-                Shueisha's shōnen
-                manga magazine <a href="https://en.wikipedia.org/wiki/Weekly_Sh%C5%8Dnen_Jump"><em>Weekly Shōnen Jump</em></a>
+                <a href="https://en.wikipedia.org/wiki/Shueisha">Shueisha</a>'s <a
+                    href="https://en.wikipedia.org/wiki/Sh%C5%8Dnen_manga"><em>shōnen</em>
+                    manga</a> magazine <a href="https://en.wikipedia.org/wiki/Weekly_Sh%C5%8Dnen_Jump"><em>Weekly Shōnen
+                        Jump</em></a>
                 since July
-                1997, with its individual chapters compiled into 101 tankōbon volumes as of December 2021. The story
+                1997, with its individual chapters compiled into 101 <a
+                    href="https://en.wikipedia.org/wiki/Tank%C5%8Dbon"><em>tankōbon</em></a> volumes as of December 2021. The story
                 follows the
-                adventures of Monkey D. Luffy, a boy whose body gained the properties of rubber after unintentionally
+                adventures of <a href="https://en.wikipedia.org/wiki/Monkey_D._Luffy">Monkey D. Luffy</a>, a boy whose body gained
+                the properties of rubber after unintentionally
                 eating a Devil
-                Fruit. With his pirate crew, the Straw Hat Pirates, Luffy explores the Grand Line in search of the
+                Fruit. With his pirate crew, the <a href="https://en.wikipedia.org/wiki/Straw_Hat_Pirates">Straw Hat Pirates</a>,
+                Luffy explores the Grand Line in search of the
                 world's ultimate
-                treasure known as the "One Piece" in order to become the next King of the Pirates.</p>
-            <p id="2">The manga spawned a media franchise, having been adapted into a festival film produced by
-                Production I.G, and
-                an anime series produced by Toei Animation, which began broadcasting in Japan in 1999. Additionally,
+                treasure known as the "One Piece" in order to become the next King of the Pirates.
+            </p>
+            <p id="2">The manga spawned a <a href="https://en.wikipedia.org/wiki/Media_franchise">media franchise</a>, having been
+                adapted into a festival film produced by
+                <a href="https://en.wikipedia.org/wiki/Production_I.G">Production I.G</a>, and
+                an <a href="https://en.wikipedia.org/wiki/Anime"><em>anime</em></a> series produced by <a
+                    href="https://en.wikipedia.org/wiki/Toei_Animation">Toei Animation</a>, which began broadcasting in Japan in
+                1999. Additionally,
                 Toei has
-                developed fourteen animated feature films, one OVA and thirteen television specials. Several companies
+                developed fourteen animated feature films, one <a
+                    href="https://en.wikipedia.org/wiki/Original_video_animation">OVA</a> and thirteen television specials. Several
+                companies
                 have
-                developed various types of merchandising and media, such as a trading card game and numerous video
-                games. The manga
-                series was licensed for an English language release in North America and the United Kingdom by Viz Media
+                developed various types of merchandising and media, such as a trading card game and <a
+                    href="https://en.wikipedia.org/wiki/List_of_One_Piece_video_games">numerous video
+                    games</a>. The manga
+                series was licensed for an English language release in North America and the United Kingdom by <a
+                    href="https://en.wikipedia.org/wiki/Viz_Media">Viz Media</a>
                 and in
-                Australia by Madman Entertainment. The anime series was licensed by 4Kids Entertainment for an
+                Australia by <a href="https://en.wikipedia.org/wiki/Madman_Entertainment">Madman Entertainment</a>. The anime series
+                was licensed by <a href="https://en.wikipedia.org/wiki/4Kids_Entertainment">4Kids Entertainment</a> for an
                 English-language
-                release in North America in 2004, before the license was dropped and subsequently acquired by Funimation
+                release in North America in 2004, before the license was dropped and subsequently acquired by <a
+                    href="https://en.wikipedia.org/wiki/Funimation">Funimation</a>
                 in 2007.
             </p>
             <figure>
@@ -57,48 +74,132 @@
                     Volume 61 tankōbon cover, featuring Monkey D. Luffy (center) and the Straw Hat Pirates
                 </figcaption>
             </figure>
-            <p id="3">One Piece has received praise for its storytelling, art, characterization, and humor. It has
+            <p id="3"><em>One Piece</em> has received praise for its storytelling, art, characterization, and humor. It has
                 received many
                 awards and is ranked by critics, reviewers, and readers as one of the best manga of all time. Several
                 volumes of the
                 manga have broken publishing records, including the highest initial print run of any book in Japan. In
-                2015, One
-                Piece set the Guinness World Record for "the most copies published for the same comic book series by a
+                2015, <em>One
+                    Piece</em> set the <a href="https://en.wikipedia.org/wiki/Guinness_World_Records"><em>Guinness World
+                        Record</em></a> for "the most copies published for the same comic book series by a
                 single
                 author". It was the best-selling manga for eleven consecutive years from 2008 to 2018, and is the only
                 manga that
                 had an initial print of volumes of above 3 million continuously for more than 10 years, as well as the
                 only that had
-                achieved more than 1 million copies sold in all of its 100 published tankōbon volumes.</p>
+                achieved more than 1 million copies sold in all of its 100 published <a
+                    href="https://en.wikipedia.org/wiki/Tank%C5%8Dbon"><em>tankōbon</em></a> volumes.</p>
             <p id="4">As of July 2021, One Piece had over 490 million copies in circulation in 58 countries and regions
                 worldwide,
-                making it the best-selling manga series in history, and the best-selling comic series printed in book
+                making it the best-selling <a href="https://en.wikipedia.org/wiki/List_of_best-selling_manga"><em>manga</em>
+                    series</a> in history, and the <a
+                    href="https://en.wikipedia.org/wiki/List_of_best-selling_comic_series">best-selling comic series</a> printed in
+                book
                 volume. It is
-                also one of the highest-grossing media franchises of all time.</p>
+                also one of the <a href="https://en.wikipedia.org/wiki/List_of_highest-grossing_media_franchises">highest-grossing
+                    media franchises</a> of all time.</p>
+        </section>
+        <section>
+            <h2>Premise</h2>
+            <p id="5">The series focuses on <a href="https://en.wikipedia.org/wiki/Monkey_D._Luffy">Monkey D. Luffy</a>, a young man
+                made of rubber, whom, inspired by his childhood idol, the
+                powerful
+                pirate <a href="https://en.wikipedia.org/wiki/%22Red_Haired%22_Shanks">Red Haired" Shanks</a>, sets off on a
+                journey from the East Blue Sea to find the mythical treasure, the One
+                Piece, and proclaim himself the King of the Pirates. In an effort to organize his own crew, the <a
+                    href="https://en.wikipedia.org/wiki/Straw_Hat_Pirates">Straw Hat
+                    Pirates</a>,<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-SHPirates-2">[Jp 1]</a></sup>
+                Luffy rescues and befriends a pirate hunter and swordsman named <a
+                    href="https://en.wikipedia.org/wiki/Roronoa_Zoro">Roronoa Zoro</a>, and they head off
+                in
+                search of the titular treasure. They are joined in their journey by <a
+                    href="https://en.wikipedia.org/wiki/Nami_(One_Piece)">Nami</a>, a money-obsessed thief and navigator;
+                <a href="https://en.wikipedia.org/wiki/Usopp">Usopp</a>, a sniper and compulsive liar; and <a
+                    href="https://en.wikipedia.org/wiki/Sanji_(One_Piece)">Sanji</a>, a perverted but chivalrous chef. They acquire
+                a ship, the <med>Going
+                    Merry</med>,<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-GMerry-3">[Jp 2]</a></sup> and
+                engage in confrontations with notorious pirates of the East Blue. As Luffy and his crew set out
+                on
+                their adventures, others join the crew later in the series, including <a
+                    href="https://en.wikipedia.org/wiki/Tony_Tony_Chopper">Tony Tony Chopper</a>, an anthropomorphized
+                reindeer doctor; <a href="https://en.wikipedia.org/wiki/Nico_Robin">Nico Robin</a>, an archaeologist and former <a
+                    href="https://en.wikipedia.org/wiki/List_of_One_Piece_characters#Baroque_Works">Baroque Works</a> assassin; <a
+                    href="https://en.wikipedia.org/wiki/Franky_(One_Piece)">Franky</a>, a cyborg shipwright;
+                <a href="https://en.wikipedia.org/wiki/Brook_(One_Piece)">Brook</a>,
+                a skeleton musician and swordsman; and <a
+                    href="https://en.wikipedia.org/wiki/List_of_One_Piece_characters#Jimbei">Jimbei</a>, a fish-man helmsman and
+                former member of the <a
+                    href="https://en.wikipedia.org/wiki/List_of_One_Piece_characters#Seven_Warlords_of_the_Sea">Seven Warlords of
+                    the
+                    Sea</a>. Once the <med>Going Merry</med> becomes damaged beyond repair, the Straw Hat Pirates acquire a new
+                ship, the <med>Thousand
+                    Sunny</med>,<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-TSunny-4">[Jp 3]</a></sup> built by
+                Franky. Together, they encounter other pirates, bounty hunters, criminal organizations,
+                revolutionaries, secret agents, and soldiers of the corrupt <a
+                    href="https://en.wikipedia.org/wiki/List_of_One_Piece_characters#World_Government">World Government</a>, and
+                various other friends and
+                foes, as
+                they sail the seas in pursuit of their dreams.
+            <figure>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/20030712_12_July_2003_One_Piece_The_Going_Merry_side_Odaiba_Tokyo_Japan.jpg/240px-20030712_12_July_2003_One_Piece_The_Going_Merry_side_Odaiba_Tokyo_Japan.jpg"
+                    alt="Ship - Going Merry">
+                <figcaption>
+                    Life-size reproduction of the main character ship: the Going Merry
+                </figcaption>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Thousand_Sunny.JPG/240px-Thousand_Sunny.JPG"
+                    alt="Ship - Thousand Sunny">
+                <figcaption>
+                    Life-size reproduction of the main character ship: the Thousand Sunny
+                </figcaption>
+            </figure>
+            </p>
+            <h3>Setting</h3>
+            <h4>Geography</h4>
+            <p id="6">
+                The world of <med>One Piece</med> is populated by humans and many other races, such as <a
+                    href="https://en.wikipedia.org/wiki/List_of_piscine_and_amphibian_humanoids">fish-men</a> and <a
+                    href="https://en.wikipedia.org/wiki/Merfolk">merfolk</a> (two races of
+                fish/human hybrids), dwarves, minks (a race of humanoids with animal features), and <a
+                    href="https://en.wikipedia.org/wiki/Giant">giants</a>. It is covered by two
+                vast oceans, which are divided by a massive mountain range called the Red Line,<sup><a
+                        href="https://en.wikipedia.org/wiki/One_Piece#cite_note-RLine-5">[Jp 4]</a></sup> which is also the only
+                continent in the world.<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-6">[2]</a></sup> The Grand
+                Line,<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-GLine-7">[Jp 5]</a></sup> a sea that runs
+                perpendicular to the Red Line, further divides them
+                into four seas: North Blue,<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-NBlue-8">[Jp 6]</a></sup>
+                East Blue,<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-EBlue-9">[Jp 7]</a></sup> West
+                Blue,<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-WBlue-10">[Jp 8]</a></sup> and South
+                Blue.<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-SBlue-11">[Jp 9]</a><a
+                        href="https://en.wikipedia.org/wiki/One_Piece#cite_note-12">[3]</a></sup> Surrounding the Grand
+                Line are two regions called Calm Belts,<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-CBelt-13">[Jp
+                        10]</a></sup> similar to <a href="https://en.wikipedia.org/wiki/Horse_latitudes">horse latitudes</a>, which
+                experience almost no wind or ocean
+                currents and are the breeding ground for huge sea creatures called sea kings.<sup><a
+                        href="https://en.wikipedia.org/wiki/One_Piece#cite_note-SKing-14">[Jp 11]</a></sup> Because of this, the
+                calm belts
+                are very effective barriers for those trying to enter the Grand Line.<sup><a
+                        href="https://en.wikipedia.org/wiki/One_Piece#cite_note-15">[4]</a></sup> However, navy ships, members of an
+                intergovernmental organization known as the World Government, are able to use a sea-prism stone <sup><a
+                        href="https://en.wikipedia.org/wiki/One_Piece#cite_note-SStone-16">[Jp 12]</a></sup> to mask their
+                presence from the sea kings and can simply pass through the calm belts. All other ships are forced to take a more
+                dangerous route, going through a mountain at the first intersection of the Grand Line and the Red Line, a canal
+                system known as Reverse Mountain.<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-RMount-17">[Jp
+                        13]</a><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-18">[5]</a></sup> Sea water from each of
+                the four seas runs up that mountain and merges at
+                the top to flow down a fifth canal and into the first half of the Grand Line, called Paradise because how it
+                compared to the second half.<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-19">[6]</a></sup> The
+                second half of the Grand Line, beyond the second intersection with the Red Line,
+                is known as the New World.<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-NWorld-20">[Jp 14]</a><a
+                        href="https://en.wikipedia.org/wiki/One_Piece#cite_note-21">[7]</a></sup>
+            <figure>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Onepiece-welt_%282%29.png/260px-Onepiece-welt_%282%29.png"
+                    alt="The globe of the One Piece world">
+                <figcaption>
+                    The globe of the One Piece world
+                </figcaption>
+            </figure>
+            </p>
         </section>
     </main>
-    <h2>Premise</h2>
-    <p>The series focuses on Monkey D. Luffy, a young man made of rubber, whom, inspired by his childhood idol, the
-        powerful
-        pirate "Red Haired" Shanks, sets off on a journey from the East Blue Sea to find the mythical treasure, the One
-        Piece, and proclaim himself the King of the Pirates. In an effort to organize his own crew, the Straw Hat
-        Pirates,[Jp 1] Luffy rescues and befriends a pirate hunter and swordsman named Roronoa Zoro, and they head off
-        in
-        search of the titular treasure. They are joined in their journey by Nami, a money-obsessed thief and navigator;
-        Usopp, a sniper and compulsive liar; and Sanji, a perverted but chivalrous chef. They acquire a ship, the Going
-        Merry,[Jp 2] and engage in confrontations with notorious pirates of the East Blue. As Luffy and his crew set out
-        on
-        their adventures, others join the crew later in the series, including Tony Tony Chopper, an anthropomorphized
-        reindeer doctor; Nico Robin, an archaeologist and former Baroque Works assassin; Franky, a cyborg shipwright;
-        Brook,
-        a skeleton musician and swordsman; and Jimbei, a fish-man helmsman and former member of the Seven Warlords of
-        the
-        Sea. Once the Going Merry becomes damaged beyond repair, the Straw Hat Pirates acquire a new ship, the Thousand
-        Sunny,[Jp 3] built by Franky. Together, they encounter other pirates, bounty hunters, criminal organizations,
-        revolutionaries, secret agents, and soldiers of the corrupt World Government, and various other friends and
-        foes, as
-        they sail the seas in pursuit of their dreams.</p>
-
 </body>
-
 </html>
