--- a/csp_ca1/index.html
+++ b/csp_ca1/index.html
@@ -116,8 +116,7 @@
                     href="https://en.wikipedia.org/wiki/Nami_(One_Piece)">Nami</a>, a money-obsessed thief and navigator;
                 <a href="https://en.wikipedia.org/wiki/Usopp">Usopp</a>, a sniper and compulsive liar; and <a
                     href="https://en.wikipedia.org/wiki/Sanji_(One_Piece)">Sanji</a>, a perverted but chivalrous chef. They acquire
-                a ship, the <med>Going
-                    Merry</med>,<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-GMerry-3">[Jp 2]</a></sup> and
+                a ship, the Going Merry,<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-GMerry-3">[Jp 2]</a></sup> and
                 engage in confrontations with notorious pirates of the East Blue. As Luffy and his crew set out
                 on
                 their adventures, others join the crew later in the series, including <a
@@ -131,9 +130,9 @@
                 former member of the <a
                     href="https://en.wikipedia.org/wiki/List_of_One_Piece_characters#Seven_Warlords_of_the_Sea">Seven Warlords of
                     the
-                    Sea</a>. Once the <med>Going Merry</med> becomes damaged beyond repair, the Straw Hat Pirates acquire a new
-                ship, the <med>Thousand
-                    Sunny</med>,<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-TSunny-4">[Jp 3]</a></sup> built by
+                    Sea</a>. Once the Going Merry becomes damaged beyond repair, the Straw Hat Pirates acquire a new
+                ship, the Thousand
+                    Sunny,<sup><a href="https://en.wikipedia.org/wiki/One_Piece#cite_note-TSunny-4">[Jp 3]</a></sup> built by
                 Franky. Together, they encounter other pirates, bounty hunters, criminal organizations,
                 revolutionaries, secret agents, and soldiers of the corrupt <a
                     href="https://en.wikipedia.org/wiki/List_of_One_Piece_characters#World_Government">World Government</a>, and
@@ -146,17 +145,11 @@
                 <figcaption>
                     Life-size reproduction of the main character ship: the Going Merry
                 </figcaption>
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Thousand_Sunny.JPG/240px-Thousand_Sunny.JPG"
-                    alt="Ship - Thousand Sunny">
-                <figcaption>
-                    Life-size reproduction of the main character ship: the Thousand Sunny
-                </figcaption>
             </figure>
-            </p>
             <h3>Setting</h3>
             <h4>Geography</h4>
             <p id="6">
-                The world of <med>One Piece</med> is populated by humans and many other races, such as <a
+                The world of One Piece is populated by humans and many other races, such as <a
                     href="https://en.wikipedia.org/wiki/List_of_piscine_and_amphibian_humanoids">fish-men</a> and <a
                     href="https://en.wikipedia.org/wiki/Merfolk">merfolk</a> (two races of
                 fish/human hybrids), dwarves, minks (a race of humanoids with animal features), and <a
@@ -198,7 +191,6 @@
                     The globe of the One Piece world
                 </figcaption>
             </figure>
-            </p>
         </section>
     </main>
 </body>
