--- a/csp_ca1/index.html
+++ b/csp_ca1/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="index.css" type="text">
     <meta charset="utf-8">
     <meta name="Author" content="Danilo">
     <meta name="Description" content="A copy from Wikipedia One Piece's Article">
@@ -12,12 +13,16 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#1"> Paragraph 1</a></li>
-                <li><a href="#2"> Paragraph 2</a></li>
-                <li><a href="#3"> Paragraph 3</a></li>
-                <li><a href="#4"> Paragraph 4</a></li>
-                <li><a href="#5"> Paragraph 5</a></li>
-                <li><a href="#6"> Paragraph 6</a></li>
+                <table>
+                    <tr>
+                    <td><li><a href="#1"> Paragraph 1</a></li></td>
+                    <td><li><a href="#2"> Paragraph 2</a></li></td>
+                    <td><li><a href="#3"> Paragraph 3</a></li></td>
+                    <td><li><a href="#4"> Paragraph 4</a></li></td>
+                    <td><li><a href="#5"> Paragraph 5</a></li></td>
+                    <td><li><a href="#6"> Paragraph 6</a></li></td>
+                    </tr>
+                </table>
             </ul>
         </nav>
     </header>
