--- a/csp_ca1/index.html
+++ b/csp_ca1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="index.css" type="css/style.css">
     <meta charset="utf-8">
     <meta name="Author" content="Danilo">
     <meta name="Description" content="A copy from Wikipedia One Piece's Article">
