--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="index.css" type="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <meta name="Author" content="Danilo">
     <meta name="Description" content="A copy from Wikipedia One Piece's Article">
@@ -197,6 +197,9 @@
                 </figcaption>
             </figure>
         </section>
+<footer id="footer">
+    <em>Written by: Eiichiro Oda</em>   -   <em>Published by Shueisha</em>   -  <em>English publisher NA Viz Media</em>
+</footer>
     </main>
 </body>
 </html>
