--- a/index.html
+++ b/index.html
@@ -10,24 +10,18 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <table>
-                    <tr>
-                    <td><li><a href="#1"> Paragraph 1</a></li></td>
-                    <td><li><a href="#2"> Paragraph 2</a></li></td>
-                    <td><li><a href="#3"> Paragraph 3</a></li></td>
-                    <td><li><a href="#4"> Paragraph 4</a></li></td>
-                    <td><li><a href="#5"> Paragraph 5</a></li></td>
-                    <td><li><a href="#6"> Paragraph 6</a></li></td>
-                    </tr>
-                </table>
-            </ul>
-        </nav>
-    </header>
     <main>
         <section>
+            <table>
+                <tr>
+                  <th><li><a href="#1"> Paragraph 1</a></li></th>
+                  <th><li><a href="#2"> Paragraph 2</a></li></th>
+                  <th><li><a href="#3"> Paragraph 3</a></li></th>
+                  <th><li><a href="#4"> Paragraph 4</a></li></th>
+                  <th><li><a href="#1"> Paragraph 5</a></li></th>
+                  <th><li><a href="#1"> Paragraph 6</a></li></th>
+                </tr>
+              </table>
             <h1>One Piece</h1>
             <p id="1"> <strong>One Piece</strong> (stylized in all caps) is a Japanese <a
                     href="https://en.wikipedia.org/wiki/Manga">manga</a> series written and illustrated by <a
